# -open-interpreter

./: .gitignore  CMakeLists.txt  README.md  benchmark_safety_eval.py  main.cpp  main.py  requirements.txt
llm_server/: bd.py  llms.py  main.py  server.py
src/: main.cpp
web/: app.py  serv.py
